@@ -7,14 +7,17 @@
 \arguments{
   \item{object}{a computed model object of class
   \code{ExploratoryClass}, \code{ConfirmatoryClass}, or
-  \code{MultipleGroupClass}}
+  \code{MultipleGroupClass}. Input may also be a
+  \code{list} for comparing similar item types (e.g., 1PL
+  vs 2PL)}
 
   \item{item}{a single numeric value indicating which item
   to plot}
 
   \item{type}{plot type to use, information
-  (\code{'info'}), or item trace lines (\code{'trace'}), or
-  information contours \code{('infocontour')} (not for
+  (\code{'info'}), item trace lines (\code{'trace'}),
+  relative efficiency lines (\code{'RE'}), or information
+  contours \code{('infocontour')} (not for
   \code{MultipleGroupClass} objects)}
 
   \item{degrees}{the degrees argument to be used if there
@@ -32,9 +35,18 @@
 data(LSAT7)
 fulldata <- expand.table(LSAT7)
 mod1 <- mirt(fulldata,1)
+mod2 <- mirt(fulldata,1, itemtype = '1PL')
+mod3 <- mirt(fulldata,2)
 
 itemplot(mod1, 2)
 itemplot(mod1, 2, type = 'info')
+
+mods <- list(twoPL = mod1, onePL = mod2)
+itemplot(mods, 1, type = 'RE')
+
+itemplot(mod3, 3, type = 'info')
+
+
     }
 }
 \author{
